src/pages/index/sub/contadores_mobile/style.css
.contadores-m-container {
    height: 100vh;
    display: flex;
    flex-direction: column;
    position: relative;
    margin-bottom: 40px;
}

.contadores-m-container .primeiro {
    background: url('../../../../assets/background_triangulo.jpg');
    background-position: center;
    background-size: cover;

    padding: 20px 0px;

    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;

    width: 100%;
}

.contadores-m-container .primeiro .contador {
    width: 45%;
    margin-top: 10px;
    margin-bottom: 10px;
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.contadores-m-container .primeiro .contador .cima {
    display: flex;
    align-items: baseline;
    justify-content: center;
}

.contadores-m-container .primeiro .contador .cima .numero {
    color: #dfdfdf;
    font-weight: normal;
    font-size: 66.4286px;
}

.contadores-m-container .primeiro .contador .cima .mais {
    color: #dfdfdf;
    font-weight: normal;
    font-size: 60px;
}

.contadores-m-container .primeiro .contador .cima .mil {
    color: #dfdfdf;
    font-weight: normal;
    font-size: 45px;
}

.contadores-m-container .primeiro .contador .descricao {
    color: #dfdfdf;
    font-weight: normal;
    font-size: 19.4704px;
    line-height: 29px;
}

.contadores-m-container .segundo {
    height: 50vh;
    margin-top: 20px;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 2;
}

.contadores-m-container .segundo .img-sob {
    margin-left: 5vw;
}

.contadores-m-container .segundo .img-sob img {
    object-fit: cover;
    height: 50vh;
    width: 45vw;
}

.contadores-m-container .segundo .textos {
    margin-right: 5vw;
    display: flex;
    flex-direction: column;
}

.contadores-m-container .segundo .textos h2 {
    width: 40vw;
    font-weight: normal;
    font-size: 35px;
    line-height: 52px;
    text-align: right;
    text-transform: uppercase;

    color: #000000;
}

.contadores-m-container .segundo .textos button {
    margin-top: 20px;

    border: 0;
    color: white;
    font-size: 20px;
    padding: 10px 26px;
    font-weight: 400;
    text-transform: uppercase;

    transition: opacity 0.5s;
}

.contadores-m-container .segundo .textos button:hover {
    opacity: 0.7;
}

